# BioPython

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  generate_chapters.py  pyproject.toml
Chapter_00_Environment/: README.md  main.py  practice.py  practice_solution.py
Chapter_01_Basics/: README.md  main.py  practice.py  practice_solution.py
Chapter_02_DataStructures/: README.md  main.py  practice.py  practice_solution.py
Chapter_03_ControlFlow/: README.md  main.py  practice.py  practice_solution.py
Chapter_04_Functions/: README.md  main.py  practice.py  practice_solution.py
Chapter_05_FileIO/: README.md  main.py  practice.py  practice_solution.py
Chapter_06_Pandas_Intro/: README.md  main.py  optimization_summary.md  practice.py  practice_solution.py
Chapter_07_Pandas/: README.md  main.py  practice.py  practice_solution.py
Chapter_08_Visualization/: README.md  main.py  practice.py  practice_solution.py
Chapter_09_Biopython/: README.md  main.py  practice.py  practice_solution.py
Chapter_10_MachineLearning/: README.md  main.py  practice.py  practice_solution.py
data/: README.md  biomarkers_dataset.csv  cancer_clinical_data.csv  dna_sequence.fasta  gene_expression.csv  gff_features.gff  single_cell_sample.csv
